--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="w-full container">
           <p class="text-xl text-white leading-relaxed lg:leading-loose mt-5 md:text-3xl lg:text-4xl xl:text-6xl mb-5 ">I am UIUX Designer for more than 2 year based in Indonesia. I create design mobile app and website.<span class="font-bold"> Let’s colaborating.</span> 
           </p>
-          <a href="#" class="text-lg font-semibold "> 
+          <a href="mailto:bismasuryamahendra@gmail.com" class="text-lg font-semibold "> 
             <div class="w-full border-2 text-center py-3 bg-white
              text-black hover:text-white hover:border-white hover:bg-black sm:hidden transition duration-300 ease-in">
               Email Me
@@ -100,7 +100,7 @@
             <p class="mt-5 text-grey text-base">Sept 2022</p>
             <h1 class="mt-5 text-white text-2xl font-semibold">Course App</h1>
             <p class="mt-5 mb-10 text-grey text-base w-full leading-relaxed text-truncate">This is an app concept for an online course platform. Users can select courses based on their interests and mentors.</p>
-              <a href="#" target="_blank" class="text-base font-semibold border-2 text-center py-3 px-5 border-white text-white hover:text-black hover:bg-white sm:inline transition duration-300 ease-in "> 
+              <a href="https://dribbble.com/shots/19385154-Course-App" target="_blank" class="text-base font-semibold border-2 text-center py-3 px-5 border-white text-white hover:text-black hover:bg-white sm:inline transition duration-300 ease-in "> 
                   See Project
               </a>
           </div>
@@ -130,7 +130,7 @@
               </div>
           </div>
         </a>
-        <a href="https://medium.com/@bismahendra/ui-ux-case-study-bergerak-workout-app-eaf65d82cd11" target="_blank" class="border-2 flex border-white w-full p-2 gap-5 items-center lg:hidden">
+        <a href="https://dribbble.com/shots/19385154-Course-App" target="_blank" class="border-2 flex border-white w-full p-2 gap-5 items-center lg:hidden">
           <img src="dist/img/3.svg" alt="Finance" class="w-24" />
           <div class="">
               <h1 class="text-white text-lg">Course App</h1>
@@ -231,7 +231,7 @@
           <h2 class="text-lg font-semibold ">Full Effort</h2>
           <p class="leading-relaxed mt-1 text-grey">Saya akan menuangkan kemampuan pada apa yang saya kerjakan. </p>
         </div>
-        <a href="#" class="text-lg font-semibold "> 
+        <a href="mailto:bismasuryamahendra@gmail.com" class="text-lg font-semibold "> 
           <div class="w-full border-1 text-center py-3 bg-white
            text-black hover:text-white hover:border-white hover:bg-black sm:hidden transition duration-300 ease-in">
             Email Me
