--- a/index.html
+++ b/index.html
@@ -223,15 +223,15 @@
         with me</h1>
         <div class="mt-4">
           <h2 class="text-lg font-semibold ">Communicative</h2>
-          <p class="leading-relaxed mt-1 text-grey">Saya orang yang terbuka untuk diskusi, membuat brief dengan lengkap dan klir.</p>
+          <p class="leading-relaxed mt-1 text-grey">I am a person who is open to discussion and makes briefs completely and clearly.</p>
         </div>
         <div class="mt-5">
           <h2 class="text-lg font-semibold ">Carefulness</h2>
-          <p class="leading-relaxed mt-1 text-grey">Pedulli dengan waktu, selalu mencoba manajemen yang baik dan memerhatikan detail pekerjaan.</p>
+          <p class="leading-relaxed mt-1 text-grey">Care about time, always try good management and pay attention to work details.</p>
         </div>
         <div class="mt-5 mb-5">
           <h2 class="text-lg font-semibold ">Full Effort</h2>
-          <p class="leading-relaxed mt-1 text-grey">Saya akan menuangkan kemampuan pada apa yang saya kerjakan. </p>
+          <p class="leading-relaxed mt-1 text-grey">I will put all my abilities into what I do.</p>
         </div>
         <a href="mailto:bismasuryamahendra@gmail.com" class="text-lg font-semibold "> 
           <div class="w-full border-1 text-center py-3 bg-white
