--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             </div>
           </a>
           <div class="mt-6 lg:mt-12" >
-            <a href="mailto:bismasuryamahendra@gmail.com" class="mt-10 text-lg font-semibold border-2 text-center py-3 px-5 border-white text-white hover:text-black hover:bg-white hidden sm:inline lg:text-4xl lg:px-7 transition duration-300 ease-in "> 
-                Email Me
+            <a href="https://drive.google.com/file/d/1SEsEIFEqngTDo23QRELqCVvsewyKcdYG/view?usp=share_link" target="_blank" class="mt-10 text-lg font-semibold border-2 text-center py-3 px-5 border-white text-white hover:text-black hover:bg-white hidden sm:inline lg:text-4xl lg:px-7 transition duration-300 ease-in "> 
+                Portfolio 2022 PDF
             </a>
           </div>
         </div>
