--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <div class="w-full container">
           <p class="text-xl text-white leading-relaxed lg:leading-loose mt-5 md:text-3xl lg:text-4xl xl:text-6xl mb-5 ">I am UIUX Designer for more than 2 year based in Indonesia. I create design mobile app and website.<span class="font-bold"> Let’s colaborating.</span> 
           </p>
-          <a href="mailto:bismasuryamahendra@gmail.com" class="text-lg font-semibold "> 
+          <a href="https://drive.google.com/file/d/1SEsEIFEqngTDo23QRELqCVvsewyKcdYG/view?usp=share_link" target="_blank" class="text-lg font-semibold "> 
             <div class="w-full border-2 text-center py-3 bg-white
              text-black hover:text-white hover:border-white hover:bg-black sm:hidden transition duration-300 ease-in">
-              Email Me
+              Portfolio 2022 PDF
             </div>
           </a>
           <div class="mt-6 lg:mt-12" >
